<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item
       android:id="@+id/menu_send_kiss"
       android:title="@string/menu_send_a_kiss"
       android:icon="@drawable/ic_action_person"
       android:showAsAction="always"
       />

    <item
        android:id="@+id/menu_send_message"
        android:title="@string/menu_send_message"
        android:icon="@drawable/ic_action_chat"
        android:showAsAction="always"
        />


    <item
        android:id="@+id/menu_fertility_calendar"
        android:title="@string/menu_calendar"
        android:icon="@drawable/ic_menu_my_calendar"
        android:showAsAction="always"
        />

        <item
            android:id="@+id/main_menu"
            android:title="menu"
            android:icon="@drawable/ic_action_overflow"
            android:showAsAction="always">
                <menu>
                    <item
                        android:id="@+id/menu_sex"
                        android:title="@string/menu_select_sex"
                        />
                    <item
                        android:id="@+id/menu_edit_friends"
                        android:title="@string/menu_edit_partner"
                        />
                    <item
                        android:title="@string/logout_menu_title"
                        android:id="@+id/menu_logout"/>
                </menu>
        </item>
</menu>