<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    tools:context="com.example.victor.swipeviews.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/backgroudImage"
        android:src="@drawable/backgroud"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitStart"
        android:layout_gravity="left|center"
 />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_username"
        android:hint="@string/hint_login_username"
        android:layout_above="@+id/login_password"
        android:layout_alignLeft="@+id/backgroudImage"
        android:layout_alignStart="@+id/backgroudImage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password"
        android:hint="@string/hint_login_password"
        android:layout_above="@+id/logInButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_button"
        android:id="@+id/logInButton"
        android:layout_above="@+id/signUpText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sign_up_text"
        android:id="@+id/signUpText"
        android:layout_alignBottom="@+id/backgroudImage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp" />



</RelativeLayout>
